--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,9 +4,10 @@
   <% @articles.each { |a| %>
   <li>
     <%= link_to a.title, article_path(a), class: 'article_title', id: "article_#{a.id}" %>
+    <%= link_to "delete", article_path(a), method: :delete , data: {confirm: "Really delete the article?"}%>
+    <%= link_to "edit", edit_article_path(a) %>
   </li>
-   <% }%>
-
+ <% } %>
 </ul>
 
-<%=  link_to "Create New article", new_article_path%>
+<%=  link_to "Create New article", new_article_path %>
