--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,10 @@
 <h1><%=@article.title %></h1>
 <body><%=@article.body %></body>
 <p></p>
+<hr>
+
+<h3>Comments <%= @article.comments.size %></h3>
+<%= render partial: "articles/comment", collection: @article.comments %>
+
+<%= render partial: "comments/form" %>
 <%= link_to "<<back to list of Articles", articles_path %>
